--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
+    "react-router-dom": "^4.3.1",
     "superagent": "^4.0.0-beta.5"
   },
   "devDependencies": {
